Fix tutorial layout and ToC on mobile

--- a/www/public/site.css
+++ b/www/public/site.css
@@ -276,6 +276,10 @@ h3 {
     padding: 4px;
 }
 
+#tutorial-toc-toggle:checked+#tutorial-toc {
+    display: block;
+}
+
 .home-link-text {
     padding: 8px;
     font-size: 24px;
@@ -533,8 +537,21 @@ li {
         --body-max-width: none;
     }
 
-    #tutorial-main main {
-        max-width: none;
+    #tutorial-main main, #tutorial-toc-toggle-label, #close-tutorial-toc {
+        display: block !important;
+    }
+
+    #tutorial-toc {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        overflow-y: auto;
+        margin: 0 !important;
+        padding-right: 120px;
+        border: 0;
     }
 
     #homepage-logo {
@@ -1197,6 +1214,7 @@ code .dim {
 }
 
 #tutorial-toc {
+    position: relative;
     background-color: var(--gray-bg);
     flex: 0 0 auto; /* Take up as much space as it needs */
     margin-top: 30px;
@@ -1264,18 +1282,29 @@ code .dim {
     /* This may be overridden on mobile-friendly screen widths */
 }
 
+#tutorial-toc-toggle:hover,
+#tutorial-toc-toggle-label:hover,
+#close-tutorial-toc:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 #tutorial-toc-toggle,
 #tutorial-toc-toggle-label {
-    font-size: 1.1rem;
+    font-size: 1.2rem;
     float: right;
+    padding: 0 1rem;
+    font-family: Lato;
+    font-weight: normal;
 }
 
 #close-tutorial-toc {
     position: absolute;
-    top: 20px;
-    right: 8px;
-    font-size: 18px;
+    top: 1rem;
+    right: 1rem;
+    font-size: 1.2rem;
     padding: 12px 24px;
+    font-weight: bold;
 }
 
 /* for larger screens */
